# edm

./: .gitignore  example.py  fid.py  pyproject.toml  train.py
src/edm/: __init__.py  generate.py
src/edm/torch_utils/: misc.py  persistence.py  training_stats.py
src/edm/training/: augment.py  dataset.py  loss.py  networks.py  training_loop.py
